--- a/src/app/billpay/receipt-list/receipt-list.component.scss
+++ b/src/app/billpay/receipt-list/receipt-list.component.scss
@@ -81,6 +81,8 @@
   
   .mat-column-SerialNum,
   .mat-column-createddate,
+  .mat-column-vendor,
+  .mat-column-consultantname,
   .mat-column-payment_date,
   .mat-column-amount_received,
   .mat-column-payment_mode {
