--- a/src/app/usit/components/sales/consultant-list/add-consultant/add-consultant.component.html
+++ b/src/app/usit/components/sales/consultant-list/add-consultant/add-consultant.component.html
@@ -169,7 +169,7 @@
         </mat-form-field>
 
 <!-- Assign consultant -->
-<mat-form-field appearance="fill" *ngIf="this.role !== 'Employee' && flag !== 'DomRecruiting'">
+<mat-form-field appearance="fill" *ngIf="this.role !== 'Employee'">
   <mat-label>Assign Consultant To</mat-label>
     <mat-chip-grid #chipGrid aria-label="Assign consultant" formControlName="empid">
       <mat-chip-row *ngFor="let employee of selectData" class="chip-style" (removed)="remove(employee)">
