--- a/src/app/usit/components/sales/consultant-list/add-consultant/add-consultant.component.html
+++ b/src/app/usit/components/sales/consultant-list/add-consultant/add-consultant.component.html
@@ -169,7 +169,8 @@
         </mat-form-field>
 
 <!-- Assign consultant -->
-<mat-form-field appearance="fill" *ngIf="this.role !== 'Employee'">
+<!-- <mat-form-field appearance="fill" *ngIf="this.role !== 'Employee'"> -->
+  <mat-form-field appearance="fill" *ngIf="this.role !== 'Employee' && this.role==='Team Leader Sales' || this.role==='Team Leader Recruiting'">
   <mat-label>Assign Consultant To</mat-label>
     <mat-chip-grid #chipGrid aria-label="Assign consultant" formControlName="empid">
       <mat-chip-row *ngFor="let employee of selectData" class="chip-style" (removed)="remove(employee)">
