--- a/src/app/usit/components/people/active/add-active/add-active.component.html
+++ b/src/app/usit/components/people/active/add-active/add-active.component.html
@@ -255,10 +255,10 @@
         <mat-form-field *ngIf="(h1bForm.get('status').value === 'Leave of Absence' || h1bForm.get('status').value === 'Terminated') && data.actionName === 'edit-active'">
           <mat-label>{{ h1bForm.get('status').value === 'Leave of Absence' ? 'Leave of Absence Date' : '
             Termination Date' }}</mat-label>
-          <input matInput [matDatepicker]="picker5" formControlName="terminationorloadate">
+          <input matInput [matDatepicker]="picker5" formControlName="terminationandloadate">
           <mat-datepicker-toggle matIconSuffix [for]="picker5"></mat-datepicker-toggle>
           <mat-datepicker #picker5></mat-datepicker>
-          <mat-error *ngIf="h1bForm.get('terminationorloadate')!.hasError('required')"> {{ h1bForm.get('status').value === 'Leave of Absence' ? 'Leave of Absence Date' : '
+          <mat-error *ngIf="h1bForm.get('terminationandloadate')!.hasError('required')"> {{ h1bForm.get('status').value === 'Leave of Absence' ? 'Leave of Absence Date' : '
             Termination Date' }} is Required
           </mat-error>
         </mat-form-field>
