--- a/src/app/usit/components/sales/consultant-list/add-consultant/add-consultant.component.html
+++ b/src/app/usit/components/sales/consultant-list/add-consultant/add-consultant.component.html
@@ -172,7 +172,7 @@
 
 <!-- <mat-form-field appearance="fill" *ngIf="this.role !== 'Employee'"> -->
   <mat-form-field appearance="fill" *ngIf="this.role !== 'Employee' && this.role==='Team Leader Sales' || this.role==='Team Leader Recruiting'">
-<mat-form-field appearance="fill" *ngIf="this.role !== 'Employee' && flag !== 'DomRecruiting'">
+<!-- <mat-form-field appearance="fill" *ngIf="this.role !== 'Employee' && flag !== 'DomRecruiting'"> -->
 
   <mat-label>Assign Consultant To</mat-label>
     <mat-chip-grid #chipGrid aria-label="Assign consultant" formControlName="empid">
