--- a/src/app/usit/components/reports/taggedcount-report/taggedcount-report.component.scss
+++ b/src/app/usit/components/reports/taggedcount-report/taggedcount-report.component.scss
@@ -391,3 +391,12 @@ ul.breadcrumb li:last-child {
 .banter-table mat-card-content {
   height: 100%;
 }
+
+.paginator {
+  position: sticky;
+  bottom: 0;
+  background: white;
+  z-index: 100;
+  padding: 10px;
+  box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1);
+}
