--- a/src/app/usit/components/email-configuration/email-configuration.component.html
+++ b/src/app/usit/components/email-configuration/email-configuration.component.html
@@ -194,7 +194,7 @@
               Extraxt Emails </th>
             <td mat-cell *matCellDef="let element" style=" width: 10% !important;">
               <button mat-raised-button color="primary" style="width: max-content; height: max-content"
-                (click)="extractEmails(element)">
+                (click)="extractEmails(element)" [disabled]="element.status === 'In Progress - Emails are processing !'">
                 Extract
               </button>
             </td>
@@ -207,22 +207,23 @@
             </th>
             <td mat-cell *matCellDef="let element" style="width: 10% !important;">
               <button mat-raised-button color="warn" style="width: max-content; height: max-content"
-                (click)="stopExtraction(element.email)">
+                (click)="stopExtraction(element.email)" [disabled]="element.status === 'No active emails processing / Completed'">
                 Stop
               </button>
             </td>
           </ng-container>
 
-
           <!-- Status Column -->
           <ng-container matColumnDef="Status">
             <th mat-header-cell *matHeaderCellDef> Status </th>
-            <td mat-cell *matCellDef="let element">
+            <td mat-cell *matCellDef="let element"
+            [ngClass]="{
+              'status-in-progress': element.status === 'In Progress - Emails are processing !',
+              'status-completed': element.status === 'No active emails processing / Completed'
+            }">
               {{ element?.status || 'N/A' }}
             </td>
           </ng-container>
-
-
 
           <!-- Action Column-->
           <ng-container matColumnDef="Action">
