--- a/src/app/usit/components/email-extraction/email-extraction.component.html
+++ b/src/app/usit/components/email-extraction/email-extraction.component.html
@@ -11,10 +11,13 @@
             <button *ngIf="showDeleteButton" mat-icon-button color="warn" (click)="bulkDelete()">
                 <mat-icon>delete</mat-icon>
             </button>
-            <button mat-raised-button color="primary" class="add-email" (click)="extractEmails()" *ngIf="this.role !== 'Super Administrator'">
+            <button mat-raised-button color="primary" class="add-email" (click)="extractEmails()"
+                *ngIf="this.role !== 'Super Administrator'">
                 Extract Emails
             </button>
-
+            <div>
+                <mat-icon class="settings-icon" (click)="navigateBack()">settings</mat-icon>
+            </div>
             <div class="search-hot-list">
                 <input matInput type="text" class="search" placeholder="search" (keyup)="applyFilter($event)">
             </div>
@@ -24,10 +27,10 @@
     <div id="table-container" class="table-wrapper">
         <section class="mat-elevation-z8 hot-list-table-style">
             <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSort($event)" oncopy="return false">
-    
+
                 <!--- Note that these columns can be defined in any order.
                         The actual rendered columns are set as a property on the row definition" -->
-    
+
                 <!-- Select Column-->
                 <ng-container matColumnDef="select">
                     <th mat-header-cell *matHeaderCellDef style="width: 5%">
@@ -36,39 +39,41 @@
                         </mat-checkbox>
                     </th>
                     <td mat-cell *matCellDef="let element" style="width: 5%">
-                        <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? toggleSelection(element) : null"
+                        <mat-checkbox (click)="$event.stopPropagation()"
+                            (change)="$event ? toggleSelection(element) : null"
                             [checked]="selection.isSelected(element)">
                         </mat-checkbox>
                     </td>
                 </ng-container>
-    
+
                 <!-- SNo Column -->
                 <ng-container matColumnDef="SerialNum">
                     <th mat-header-cell *matHeaderCellDef style=" width: 1% ">
                         S.No </th>
                     <td mat-cell *matCellDef="let element" style=" width: 1% "> {{element?.serialNum}} </td>
                 </ng-container>
-    
+
                 <!-- To Column -->
                 <ng-container matColumnDef="To">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by To">
-                      To
+                        To
                     </th>
                     <td mat-cell *matCellDef="let element">
-                      <span [ngClass]="element?.tomails_displayedEmail ? 'consultant-name' : 'bold-class'">
-                        {{ element?.tomails_displayedEmail ?? '-' }}
-                        <span *ngIf="element?.tomails_remainingEmailsCount > 0" [matMenuTriggerFor]="tomailsMenu" class="email-count">
-                          +{{ element?.tomails_remainingEmailsCount }}
+                        <span [ngClass]="element?.tomails_displayedEmail ? 'consultant-name' : 'bold-class'">
+                            {{ element?.tomails_displayedEmail ?? '-' }}
+                            <span *ngIf="element?.tomails_remainingEmailsCount > 0" [matMenuTriggerFor]="tomailsMenu"
+                                class="email-count">
+                                +{{ element?.tomails_remainingEmailsCount }}
+                            </span>
                         </span>
-                      </span>
-                      <mat-menu #tomailsMenu="matMenu" class="to-menu">
-                        <ng-container *ngFor="let email of element?.tomails_remainingEmails">
-                          <button mat-menu-item>{{ email }}</button>
-                        </ng-container>
-                      </mat-menu>
+                        <mat-menu #tomailsMenu="matMenu" class="to-menu">
+                            <ng-container *ngFor="let email of element?.tomails_remainingEmails">
+                                <button mat-menu-item>{{ email }}</button>
+                            </ng-container>
+                        </mat-menu>
                     </td>
-                  </ng-container>
-    
+                </ng-container>
+
                 <!-- From Column -->
                 <ng-container matColumnDef="From">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by From">
@@ -89,7 +94,7 @@
                           </mat-menu> -->
                     </td>
                 </ng-container>
-    
+
                 <!-- CC Column -->
                 <ng-container matColumnDef="CC">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by CC">
@@ -98,15 +103,16 @@
                     <td mat-cell *matCellDef="let element">
                         <span [ngClass]="element?.ccmails_displayedEmail ? 'consultant-name' : 'bold-class'">
                             {{ element?.ccmails_displayedEmail ?? '-' }}
-                            <span *ngIf="element?.ccmails_remainingEmailsCount > 0" [matMenuTriggerFor]="ccmailsMenu" class="email-count">
+                            <span *ngIf="element?.ccmails_remainingEmailsCount > 0" [matMenuTriggerFor]="ccmailsMenu"
+                                class="email-count">
                                 +{{ element?.ccmails_remainingEmailsCount }}
                             </span>
-                          </span>
-                          <mat-menu #ccmailsMenu="matMenu" class="cc-menu">
+                        </span>
+                        <mat-menu #ccmailsMenu="matMenu" class="cc-menu">
                             <ng-container *ngFor="let email of element?.ccmails_remainingEmails">
-                              <button mat-menu-item>{{ email }}</button>
+                                <button mat-menu-item>{{ email }}</button>
                             </ng-container>
-                          </mat-menu>
+                        </mat-menu>
                     </td>
                 </ng-container>
 
@@ -115,11 +121,11 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Subject">
                         Subject</th>
                     <td mat-cell *matCellDef="let element">
-                        <span class="subject-text"
-                        [matTooltip]="element?.subject | titlecase"
-                        matTooltipPosition="above">
-                    {{ (element?.subject | titlecase) | slice:0:32 }}<ng-container *ngIf="(element?.subject | titlecase).length > 32">...</ng-container>
-                  </span>
+                        <span class="subject-text" [matTooltip]="element?.subject | titlecase"
+                            matTooltipPosition="above">
+                            {{ (element?.subject | titlecase) | slice:0:32 }}<ng-container
+                                *ngIf="(element?.subject | titlecase).length > 32">...</ng-container>
+                        </span>
                     </td>
                 </ng-container>
 
@@ -155,7 +161,7 @@
                         </span>
                     </td>
                 </ng-container> -->
-    
+
                 <!-- table ROW -->
                 <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
                 <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
