--- a/src/app/usit/components/reports/taggedcount-report/taggedcount-report.component.html
+++ b/src/app/usit/components/reports/taggedcount-report/taggedcount-report.component.html
@@ -96,8 +96,13 @@
  <!--- Note that these columns can be defined in any order.
                         The actual rendered columns are set as a property on the row definition" -->
   
+                        <ng-container matColumnDef="SerialNum">
+                          <th mat-header-cell *matHeaderCellDef  style="width: 2%">S.No</th>
+                          <td mat-cell *matCellDef="let element">{{ element.serialNum }} </td>
+                        </ng-container>
+
  <!-- Department -->
- <ng-container matColumnDef="SerialNum">
+ <ng-container matColumnDef="Title">
   <th mat-header-cell *matHeaderCellDef  style="width: 26%">Job Title</th>
   <td mat-cell *matCellDef="let element">{{ element.job_Title }} </td>
 </ng-container>
@@ -108,7 +113,7 @@
                       mat-header-cell
                       *matHeaderCellDef
                    
-                      style="width: 15%"
+                      style="width: 11%"
                     >
                     consultant Name
                     </th>
@@ -123,7 +128,7 @@
                       mat-header-cell
                       *matHeaderCellDef
                      
-                      style="width: 2%"
+                      style="width: 12%"
                     >
                     Commented By
                     </th>
@@ -138,7 +143,7 @@
                       mat-header-cell
                       *matHeaderCellDef
                      
-                      style="width: 15%"
+                      style="width: 7%"
                     >
                    Issue Type
                     </th>
